# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/CLI/: main.cpp
src/Engine/: CMakeLists.txt  board.cpp  board.h  magicNumbers.cpp  magicNumbers.h  moveGeneration.cpp
src/Engine/include/: board.h  evaluation.h  magics.h  move.h  moveGeneration.h  perft.h  polyglot.h  polyglot_keys.h  search.h  tbconfig.h  transposition.h  zobrist.h
src/Engine/src/: board.cpp  evaluation.cpp  magicNumbers.cpp  moveGeneration.cpp  perft.cpp  polyglot.cpp  search.cpp  tbcore.cpp  tbprobe.cpp  transposition.cpp  zobrist.cpp
src/GUI/: main.cpp
src/UCI/: main.cpp
tournaments/PGN/: Napoleon_vs_myEngine.pgn  fatalii0.7.0_vs_myEngine.pgn  kheprichess4.0.1_vs_myEngine.pgn  kobol1.0_vs_myEngine.pgn  vice1.1_vs_myEngine_1.pgn  vice1.1_vs_myEngine_2.pgn  vice1.1_vs_myEngine_3.pgn  vice1.1_vs_myEngine_4.pgn
tournaments/Summary/: Napoleon_vs_myEngine  fatalii0.7.0_vs_myEngine  kheprichess4.0.1_vs_myEngine  kobol1.0_vs_myEngine  vice1.1_vs_myEngine_1  vice1.1_vs_myEngine_2  vice1.1_vs_myEngine_3  vice1.1_vs_myEngine_4
